zmiana nazw zmiennych, funkcji oraz plików, nowe funkcje, modyfikacja starych funkcji

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>
-          Notes
+		Draw & Chat
       </title>
 	  <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
 	  <link rel="stylesheet" href="./css/style.css">
@@ -44,7 +44,7 @@
 							<button type="button" class="btn btn-danger" onclick="logowanie();" id="ZatwierdzLogowanie">Zaloguj</button>
 						</p>
 						<p class="text-center mt-4">
-							<button type="button" class="btn btn-danger" onclick="location.href='./rejestracja.html'">Utwórz konto</button>
+							<button type="button" class="btn btn-danger" onclick="location.href='./signup.html'">Utwórz konto</button>
 						</p>
 					</form>
 				</div>
