--- a/public/main.html
+++ b/public/main.html
@@ -4,7 +4,7 @@
   <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
       <title>
-          Notes
+		Draw & Chat
       </title>
 	  <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
 	  <link rel="stylesheet" href="./css/style.css">
@@ -34,11 +34,6 @@
 			<div id="nazwaZalogowanegoUzytkownika" class="ml-auto mr-3">Zalogowany jako: </div>
 			<button id="wyloguj" class="btn btn-danger" onclick="logout();">Wyloguj</button>
 		</div>
-		<!-- <div id="dolacz" class="m-0 p-0 col-12 row">
-			<label for="nazwaUzytkownika" class="m-0">Załaduj rysunek innego użytkownika:</label>
-			<input type="text" class="form-control col-4" name="nazwaUzytkownika" id="nazwaUzytkownika" placeholder="Wpisz nazwę użytkownika"></input>
-			<button id="zaladujRysunek" class="btn btn-secondary" onclick="joinOther();">Wczytaj</button>
-		</div> -->
 		<div id="opusc" class="col-12 p-0">
 			<button id="zablokowaniBtn" class="btn btn-secondary" onclick="showBlockedUsers();">Zablokowani użytkownicy</button>
 			<button id="opuscBtn" class="btn btn-danger" onclick="leave(true);">Opuść pokój</button>
