Usprawniony system wyświetlania oraz automatycznego usuwania powiadomień; usprawnione usuwanie przestarzałych tokenów odświeżających z bazy danych; modyfikacja bazy danych; modyfikacja funkcji wylogowania oraz automatycznego logowania; automatyczne przewijanie chatu do ostatniej wiadomości podczas jego włączania oraz otrzymania nowej wiadomości; naprawiony błąd, który powodował, że użytkownicy aktywni nie pojawiali się na liśice użytkowników online

--- a/public/start.html
+++ b/public/start.html
@@ -12,16 +12,7 @@
   </head>
 
   <body class="startPage">
-	<div class="alert alert-container" id="alert" onmouseup="hideAlert();">
-		<div class="alert alert-success alert-content" id="alertOk">
-			<a href="#" class="close text-center" onclick="hideAlert();">&times;</a>
-			<div id="alertContentOk">121212</div>
-		</div>
-		<div class="alert alert-danger alert-content" id="alertError">
-			<a href="#" class="close text-center" onclick="hideAlert();">&times;</a>
-			<div id="alertContentError"></div>
-		</div>
-	</div>
+	<div class="alert alert-mainContainer" id="alert"></div>
 	
 	<div id="pageContent" class="startPageContent col-xl-6 col-lg-7 col-sm-12 ml-auto mr-auto pt-5 pb-5">
 		<div id="loginPage" class="container">
