--- a/public/start.html
+++ b/public/start.html
@@ -26,10 +26,10 @@
 				<div class="col">
 					<form>
 						<div class="form-group col-xl-10 ml-auto mr-auto">
-							<input id="username" class="form-control" placeholder="Wpisz nazwę użytkownika">
+							<input id="username" class="form-control text-center" placeholder="Wpisz nazwę użytkownika">
 						</div>
 						<div class="form-group col-xl-10 ml-auto mr-auto">
-							<input type="password" id="password" autocomplete="on" class="form-control" placeholder="Wpisz hasło">
+							<input type="password" id="password" autocomplete="on" class="form-control text-center" placeholder="Wpisz hasło">
 						</div>
 						<p class="text-center mt-5">
 							<button type="button" class="btn btn-danger" onclick="login();">Zaloguj</button>
@@ -52,10 +52,10 @@
 				<div class="col">
 					<form>
 						<div class="form-group col-xl-10 ml-auto mr-auto">
-							<input id="signupUsername" class="form-control" placeholder="Wpisz nazwę użytkownika">
+							<input id="signupUsername" class="form-control text-center" placeholder="Wpisz nazwę użytkownika">
 						</div>
 						<div class="form-group col-xl-10 ml-auto mr-auto">
-							<input type="password" id="signupPassword" autocomplete="on" class="form-control" placeholder="Wpisz hasło">
+							<input type="password" id="signupPassword" autocomplete="on" class="form-control text-center" placeholder="Wpisz hasło">
 						</div>
 						<p class="text-center mt-5">
 							<button type="button" class="btn btn-danger" onclick="createAccount();">Zarejestruj</button>
